# EveArb

./: .env.example  README.md  README_hotfix.md  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/db/: database.py  models.py
apps/api/app/routes/: admin.py  app.py  auth.py  export.py  logistics.py  market.py  opportunities.py  scheduler.py  settings.py  ui.py
apps/api/app/services/: active_opportunity_service.py  audit_service.py  auth_service.py  (+13 more)
eve_arb_v2.01/: CHANGELOG.md  README.md  docker-compose.yml
eve_arb_v2.01/apps/api/: pyproject.toml
eve_arb_v2.01/apps/api/app/: config.py  main.py
eve_arb_v2.01/apps/api/app/routes/: admin.py  analytics.py  auth.py  export.py  loads.py  refresh.py
eve_arb_v2.01/apps/web/: middleware.ts  package.json  tsconfig.json
eve_arb_v2.01/apps/worker/: pyproject.toml  worker.py
eve_arb_v2.01/apps/worker/worker_app/: config.py
eve_arb_v2.01/apps/worker/worker_app/jobs/: courier_calc.py  ingest_market.py  rebuild_loads.py  update_patterns.py
eve_arb_v2.01/infra/docker/: api.Dockerfile  worker.Dockerfile
eve_arb_v2.01/infra/railway/: railway-api.toml  railway-worker.toml
infra/docker/: api.Dockerfile
notes/: README_hotfix.txt  eve_arb_v2_02_source_update.txt  eve_arb_v2_04_source_update.txt  v2_05_patch_instructions.txt  v2_06_patch_instructions.txt  v2_07_patch_instructions.txt  v2_09_replace_add_delete.txt  v2_11_replace_add_delete.txt  v2_12_replace_add_delete.txt  v2_14_replace_add_delete.txt  v2_20_03_admin_settings_notes.txt  v2_20_04_release_notes.txt  v2_20_backend_scaffold_notes.txt
(+16 files in other folders)
