[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-arb-worker"
version = "2.0.1"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "httpx>=0.28",
  "tenacity>=9.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["worker_app*"]
